feat: cinemas endpoints
